--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
   "name": {
     "en": "Technisat SmartHome"
   },
+  "brandColor": "#009EF3",
   "description": {
     "en": "Let Technisat SmartHome devices work with Homey",
     "nl": "Laat Technisat SmartHome apparaten samenwerken met Homey"
@@ -33,7 +34,8 @@
       "class": "light",
       "capabilities": [
         "onoff",
-        "measure_power"
+        "measure_current",
+        "meter_power"
       ],
       "images": {
         "large": "/drivers/single-wall-switch/assets/images/large.png",
