Relase v1.0 - Initial version

--- a/app.json
+++ b/app.json
@@ -111,8 +111,8 @@
             "de": "Stromverbrauch-Meldung Intervall"
           },
           "hint": {
-            "en": "Interval of active current meter reports in 10 seconds increments.",
-            "nl": "Interval van periodieke rapportage van het stroomverbruik. In stappen van 10 seconden.",
+            "en": "Interval of current power meter reports in 10 seconds increments.",
+            "nl": "Interval van periodieke rapportage van het opgenomen vermogen . In stappen van 10 seconden.",
             "de": "Intervall der aktuellen Stromverbrauch-Meldung. Wert in 10 sekunden."
           },
           "zwave": {
@@ -262,168 +262,6 @@
             }
           ],
           "type": "dropdown"
-        }
-      ]
-    },
-    {
-      "id": "wall-dimmer",
-      "name": {
-        "en": "Wall Dimmer"
-      },
-      "class": "light",
-      "capabilities": [
-        "dim",
-        "onoff"
-      ],
-      "images": {
-        "large": "/drivers/wall-dimmer/assets/images/large.png",
-        "small": "/drivers/wall-dimmer/assets/images/small.png"
-      },
-      "zwave": {
-        "manufacturerId": 665,
-        "productTypeId": [
-          4
-        ],
-        "productId": [
-          6802
-        ],
-        "zwaveAllianceProductId": 3798,
-        "associationGroups": [
-          1
-        ],
-        "associationGroupsOptions": {
-          "1": {
-            "hint": {
-              "en": "The lifeline group reports the device's status."
-            }
-          }
-        }
-      },
-      "settings": [
-        {
-          "id": "1",
-          "value": true,
-          "label": {
-            "en": "Parameter 1"
-          },
-          "hint": {
-            "en": "Enable/disable central scene notifications for 2x-5x button presses."
-          },
-          "zwave": {
-            "index": 1,
-            "size": 1
-          },
-          "type": "checkbox"
-        },
-        {
-          "id": "2",
-          "value": true,
-          "label": {
-            "en": "Parameter 2"
-          },
-          "hint": {
-            "en": "Interval of current wattage meter reports in 10 seconds increments."
-          },
-          "zwave": {
-            "index": 2,
-            "size": 2
-          },
-          "type": "checkbox"
-        },
-        {
-          "id": "3",
-          "value": true,
-          "label": {
-            "en": "Parameter 3"
-          },
-          "hint": {
-            "en": "Interval of active energy meter reports in minutes."
-          },
-          "zwave": {
-            "index": 3,
-            "size": 2
-          },
-          "type": "checkbox"
-        },
-        {
-          "id": "4",
-          "value": false,
-          "label": {
-            "en": "Parameter 4"
-          },
-          "hint": {
-            "en": "Operation mode of button T"
-          },
-          "zwave": {
-            "index": 4,
-            "size": 1
-          },
-          "type": "checkbox"
-        },
-        {
-          "id": "5",
-          "value": false,
-          "label": {
-            "en": "Parameter 5"
-          },
-          "hint": {
-            "en": "Configuration of switch type connected to extension connector S"
-          },
-          "zwave": {
-            "index": 5,
-            "size": 1
-          },
-          "type": "checkbox"
-        },
-        {
-          "id": "6",
-          "value": "1",
-          "label": {
-            "en": "Parameter 6"
-          },
-          "hint": {
-            "en": "Central Scene mapping of extension input S"
-          },
-          "zwave": {
-            "index": 6,
-            "size": 1
-          },
-          "values": [
-            {
-              "id": "1",
-              "label": {
-                "en": "map extension input S to central scene of T1"
-              }
-            },
-            {
-              "id": "2",
-              "label": {
-                "en": "map extension input S to central scene of T2"
-              }
-            },
-            {
-              "id": "3",
-              "label": {
-                "en": "map extension input S to own central scene "
-              }
-            }
-          ],
-          "type": "dropdown"
-        },
-        {
-          "id": "7",
-          "value": false,
-          "label": {
-            "en": "Parameter 7"
-          },
-          "hint": {
-            "en": "Dimming curve selection"
-          },
-          "zwave": {
-            "index": 7,
-            "size": 1
-          },
-          "type": "checkbox"
         }
       ]
     }
