--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.technisat.smarthome",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "compatibility": ">=4.2.0",
   "sdk": 2,
   "name": {
@@ -9,7 +9,8 @@
   "brandColor": "#009EF3",
   "description": {
     "en": "Let Technisat SmartHome devices work with Homey",
-    "nl": "Laat Technisat SmartHome apparaten samenwerken met Homey"
+    "nl": "Laat Technisat SmartHome apparaten samenwerken met Homey",
+    "de": "Lassen Sie Technisat Smart Home-Geräte mit Honey zusammenarbeiten"
   },
   "category": [
     "lights",
