--- a/drivers/wall-dimmer/driver.settings.compose.json
+++ b/drivers/wall-dimmer/driver.settings.compose.json
@@ -1,6 +1,6 @@
 [
   {
-    "id": "1",
+    "id": "central_scenes",
     "value": 1,
     "label": {
       "en": "Central scene notifications",
@@ -23,7 +23,7 @@
     "type": "number"
   },
   {
-    "id": "2",
+    "id": "current_report",
     "value": 3,
     "attr": {
       "min": 3,
@@ -46,7 +46,7 @@
     "type": "number"
   },
   {
-    "id": "3",
+    "id": "power_report",
     "value": 60,
     "attr": {
       "min": 0,
@@ -69,7 +69,7 @@
     "type": "number"
   },
   {
-    "id": "4",
+    "id": "button_mode",
     "value": "0",
     "label": {
       "en": "Button operation",
@@ -106,7 +106,7 @@
     "type": "dropdown"
   },
   {
-    "id": "5",
+    "id": "input_switch_type",
     "value": "0",
     "label": {
       "en": "Input switch configuration",
@@ -143,7 +143,7 @@
     "type": "dropdown"
   },
   {
-    "id": "6",
+    "id": "input_notification",
     "value": "1",
     "label": {
       "en": "Input S notifications",
@@ -188,7 +188,7 @@
     "type": "dropdown"
   },
   {
-    "id": "7",
+    "id": "dimming_curve",
     "value": "0",
     "label": {
       "en": "Parameter 7"
