--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.technisat.smarthome",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "compatibility": ">=4.2.0",
   "sdk": 2,
   "name": {
@@ -98,7 +98,7 @@
       },
       "settings": [
         {
-          "id": "1",
+          "id": "central_scenes",
           "value": 1,
           "label": {
             "en": "Central scene notifications",
@@ -121,7 +121,7 @@
           "type": "number"
         },
         {
-          "id": "2",
+          "id": "current_report",
           "value": 3,
           "attr": {
             "min": 3,
@@ -144,7 +144,7 @@
           "type": "number"
         },
         {
-          "id": "3",
+          "id": "power_report",
           "value": 60,
           "attr": {
             "min": 0,
@@ -167,7 +167,7 @@
           "type": "number"
         },
         {
-          "id": "4",
+          "id": "button_mode",
           "value": "0",
           "label": {
             "en": "Button operation",
@@ -202,6 +202,149 @@
             }
           ],
           "type": "dropdown"
+        }
+      ]
+    },
+    {
+      "id": "roller-shutter",
+      "name": {
+        "en": "Roller shutter",
+        "nl": "Rolluik schakelaar",
+        "de": "Rollladenschalter"
+      },
+      "class": "windowcoverings",
+      "capabilities": [
+        "windowcoverings_set"
+      ],
+      "images": {
+        "large": "/drivers/roller-shutter/assets/images/large.png",
+        "small": "/drivers/roller-shutter/assets/images/small.png"
+      },
+      "zwave": {
+        "manufacturerId": 665,
+        "productTypeId": [
+          5
+        ],
+        "productId": [
+          6803
+        ],
+        "zwaveAllianceProductId": 3778,
+        "associationGroups": [
+          1
+        ],
+        "learnmode": {
+          "image": "/drivers/roller-shutter/assets/learnmode.svg",
+          "instruction": {
+            "en": "Press the top button on your Roller shutter three times within a second.",
+            "nl": "Druk driemaal binnen een seconde op de bovenste knop van uw Rolluik schakelaar.",
+            "de": "Drücken Sie die obere Taste auf Ihrem {{DriverNameDe}} dreimal innerhalb einer Sekunde."
+          }
+        },
+        "unlearnmode": {
+          "instruction": {
+            "en": "Hold the bottom button for at least 10 seconds, the LED should light up red.",
+            "nl": "Houd de onderste knop ingedrukt voor minstens 10 seconden. De LED brand nu rood.",
+            "de": "Halten Sie die untere Taste mindestens 10 Sekunden lang gedrückt. Die LED sollte rot leuchten."
+          }
+        },
+        "associationGroupsOptions": {
+          "1": {
+            "hint": {
+              "en": "The lifeline group reports the device's status.",
+              "nl": "De lifeline groep rapporteert de status van het apparaat.",
+              "de": "Die lifelinfe gruppe meldet den Status des Geräts."
+            }
+          }
+        }
+      },
+      "settings": [
+        {
+          "id": "central_scenes",
+          "value": 1,
+          "label": {
+            "en": "Central scene notifications",
+            "nl": "Centrale scenes",
+            "de": "Zentrale Szenen"
+          },
+          "hint": {
+            "en": "Enable/disable central scene notifications for 2x-5x button presses.",
+            "nl": "Zet centrale scene notificaties aan voor 2-5 knop drukken.",
+            "de": "Aktiviert/Deaktiviert Zentrale Szenen Benachrichtigung für 2x-5x faches drücken."
+          },
+          "zwave": {
+            "index": 1,
+            "size": 1
+          },
+          "attr": {
+            "min": 0,
+            "max": 1
+          },
+          "type": "number"
+        },
+        {
+          "id": "current_report",
+          "value": 3,
+          "attr": {
+            "min": 3,
+            "max": 8640
+          },
+          "label": {
+            "en": "Current report interval",
+            "nl": "Stroom meting rapportage",
+            "de": "Stromverbrauch-Meldung Intervall"
+          },
+          "hint": {
+            "en": "Interval of current power meter reports in 10 seconds increments.",
+            "nl": "Interval van periodieke rapportage van het opgenomen vermogen . In stappen van 10 seconden.",
+            "de": "Intervall der aktuellen Stromverbrauch-Meldung. Wert in 10 sekunden."
+          },
+          "zwave": {
+            "index": 2,
+            "size": 2
+          },
+          "type": "number"
+        },
+        {
+          "id": "power_report",
+          "value": 60,
+          "attr": {
+            "min": 0,
+            "max": 30240
+          },
+          "label": {
+            "en": "Power report interval",
+            "nl": "Energie meting rapportage",
+            "de": "Energieverbrauch-Meldung Intervall"
+          },
+          "hint": {
+            "en": "Interval of active energy meter reports in minutes. Value in minutes.",
+            "nl": "Interval van periodieke rapportage van het energieverbruik. Waarde in minuten.",
+            "de": "Intervall der aktuellen Energieverbrauch-Meldung. Wert in minuten."
+          },
+          "zwave": {
+            "index": 3,
+            "size": 2
+          },
+          "type": "number"
+        },
+        {
+          "id": "start_calibration",
+          "value": false,
+          "label": {
+            "en": "Calibration",
+            "nl": "Kalibratie",
+            "de": "Kalibration"
+          },
+          "hint": {
+            "en": "Manual shutter calibration - shutter will move up, down and up again.",
+            "nl": "Handmatige calibratie - Rolluik zal open, dicht en weer open gaan.",
+            "de": "Manuelle Verschlusskalibrierung - Der Verschluss bewegt sich nach oben, unten und wieder nach oben."
+          },
+          "zwave": {
+            "index": 4,
+            "size": 1
+          },
+          "type": "checkbox"
         }
       ]
     },
@@ -261,7 +404,7 @@
       },
       "settings": [
         {
-          "id": "1",
+          "id": "central_scenes",
           "value": 1,
           "label": {
             "en": "Central scene notifications",
@@ -284,7 +427,7 @@
           "type": "number"
         },
         {
-          "id": "2",
+          "id": "current_report",
           "value": 3,
           "attr": {
             "min": 3,
@@ -307,7 +450,7 @@
           "type": "number"
         },
         {
-          "id": "3",
+          "id": "power_report",
           "value": 60,
           "attr": {
             "min": 0,
@@ -330,7 +473,7 @@
           "type": "number"
         },
         {
-          "id": "4",
+          "id": "button_mode",
           "value": "0",
           "label": {
             "en": "Button operation",
@@ -367,7 +510,7 @@
           "type": "dropdown"
         },
         {
-          "id": "5",
+          "id": "input_switch_type",
           "value": "0",
           "label": {
             "en": "Input switch configuration",
@@ -404,7 +547,7 @@
           "type": "dropdown"
         },
         {
-          "id": "6",
+          "id": "input_notification",
           "value": "1",
           "label": {
             "en": "Input S notifications",
@@ -507,7 +650,7 @@
       },
       "settings": [
         {
-          "id": "1",
+          "id": "central_scenes",
           "value": 1,
           "label": {
             "en": "Central scene notifications",
@@ -530,7 +673,7 @@
           "type": "number"
         },
         {
-          "id": "2",
+          "id": "current_report",
           "value": 3,
           "attr": {
             "min": 3,
@@ -553,7 +696,7 @@
           "type": "number"
         },
         {
-          "id": "3",
+          "id": "power_report",
           "value": 60,
           "attr": {
             "min": 0,
@@ -576,7 +719,7 @@
           "type": "number"
         },
         {
-          "id": "4",
+          "id": "button_mode",
           "value": "0",
           "label": {
             "en": "Button operation",
@@ -613,7 +756,7 @@
           "type": "dropdown"
         },
         {
-          "id": "5",
+          "id": "input_switch_type",
           "value": "0",
           "label": {
             "en": "Input switch configuration",
@@ -650,7 +793,7 @@
           "type": "dropdown"
         },
         {
-          "id": "6",
+          "id": "input_notification",
           "value": "1",
           "label": {
             "en": "Input S notifications",
@@ -695,7 +838,7 @@
           "type": "dropdown"
         },
         {
-          "id": "7",
+          "id": "dimming_curve",
           "value": "0",
           "label": {
             "en": "Parameter 7"
