--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,6 +1,6 @@
 {
   "id": "com.technisat.smarthome",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "compatibility": ">=4.2.0",
   "sdk": 2,
   "name": {
@@ -8,7 +8,7 @@
   },
   "brandColor": "#009EF3",
   "description": {
-    "en": "Let Technisat SmartHome devices work with Homey",
+    "en": "Technisat SmartHome - versatile and simple",
     "nl": "Laat Technisat SmartHome apparaten samenwerken met Homey",
     "de": "Lassen Sie Technisat Smart Home-Geräte mit Honey zusammenarbeiten"
   },
