--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.technisat.smarthome",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "compatibility": ">=4.2.0",
   "sdk": 2,
   "name": {
@@ -9,7 +9,7 @@
   },
   "brandColor": "#009EF3",
   "description": {
-    "en": "Let Technisat SmartHome devices work with Homey",
+    "en": "Technisat SmartHome - versatile and simple",
     "nl": "Laat Technisat SmartHome apparaten samenwerken met Homey",
     "de": "Lassen Sie Technisat Smart Home-Geräte mit Honey zusammenarbeiten"
   },
@@ -57,7 +57,20 @@
           1
         ],
         "multiChannelNodes": {
-          "3": {
+          "1": {
+            "class": "light",
+            "capabilities": [
+              "onoff"
+            ],
+            "icon": "/drivers/double-wall-switch/assets/icon.svg",
+            "name": {
+              "en": "Output 1",
+              "nl": "Uitgang 1",
+              "de": "Ausgang 1"
+            },
+            "settings": []
+          },
+          "2": {
             "class": "light",
             "capabilities": [
               "onoff"
