--- a/app.json
+++ b/app.json
@@ -1,17 +1,15 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.technisat.smarthome",
-  "version": "1.3.5",
-  "compatibility": ">=4.2.0",
-  "sdk": 2,
+  "version": "1.4.0",
+  "compatibility": ">=5.0.0",
+  "sdk": 3,
   "name": {
     "en": "Technisat SmartHome"
   },
   "brandColor": "#009EF3",
   "description": {
-    "en": "Technisat SmartHome - versatile and simple",
-    "nl": "Laat Technisat SmartHome apparaten samenwerken met Homey",
-    "de": "Lassen Sie Technisat Smart Home-Geräte mit Honey zusammenarbeiten"
+    "en": "Technisat SmartHome - versatile and simple"
   },
   "category": [
     "lights",
