--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.technisat.smarthome",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "name": {
@@ -34,7 +34,8 @@
       },
       "class": "light",
       "capabilities": [
-        "onoff",
+        "onoff.output1",
+        "onoff.output2",
         "measure_power",
         "meter_power"
       ],
@@ -54,6 +55,9 @@
         "associationGroups": [
           1
         ],
+        "associationGroupsMultiChannel": [
+          2
+        ],
         "multiChannelNodes": {
           "1": {
             "class": "light",
@@ -71,7 +75,7 @@
           "2": {
             "class": "light",
             "capabilities": [
-              "onoff"
+              "onoff.output2"
             ],
             "icon": "/drivers/double-wall-switch/assets/icon.svg",
             "name": {
